--- a/web1.html
+++ b/web1.html
@@ -42,7 +42,7 @@
   
       </table>
   </main>
-   <a href="index.html"> <img width="20px" height="20px" src="https://images.emojiterra.com/google/android-10/512px/1f3e0.png"</a> 
+   <a href="index.html"> <img src="https://images.emojiterra.com/google/android-10/512px/1f3e0.png" width="20px" height="20px"</a> 
 </body>
 
 </html>
