--- a/web1.html
+++ b/web1.html
@@ -42,7 +42,7 @@
   
       </table>
   </main>
-   <a href="index.html"> <img src="http://webresizer.com/session/MuwmPDfZ1x5VbTWMRLipbJfRBA4H3E4q/result.png?1620816920.9751"</a> 
+   <a href="index.html"> <img src="https://lh3.googleusercontent.com/-ryQfPDF3oQU/YJu3v1mHPPI/AAAAAAAAFgo/KAFT6Lgb9d8ha728Jr-F7rpkskAcjBpvwCLcBGAsYHQ/1f3e0_opt.png"</a> 
 </body>
 
 </html>
